Add decorators notebook and update milestone 2 notebook

--- a/python3_milestone2-blackjack.ipynb
+++ b/python3_milestone2-blackjack.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,9 +204,14 @@
     "    def add_card(self,card):\n",
     "        self.cards.append(card)\n",
     "        self.value += values[card.rank]\n",
+    "        \n",
+    "        if card.rank == \"Ace\":\n",
+    "            self.aces += 1\n",
     "    \n",
     "    def adjust_for_ace(self):\n",
-    "        pass"
+    "        while self.value > 21 and self.aces:\n",
+    "            self.value -= 10\n",
+    "            self.aces -= 1"
    ]
   },
   {
@@ -219,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,21 +259,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def take_bet():\n",
-    "    bet_amt = 0\n",
-    "    while bet_amt < 1:\n",
+    "def take_bet(chips):\n",
+    "    \n",
+    "    while True:\n",
     "        try:\n",
-    "            bet_amt = int(input(\"Please enter a bet amount:\"))\n",
-    "            if bet_amt <= chips.total:\n",
-    "                chips.bet = bet_amt\n",
-    "            else:\n",
-    "                pass\n",
+    "            chips.bet = int(input(\"How many chips would you like to bet?\"))\n",
     "        except:\n",
-    "            print(\"Something went wrong\")"
+    "            print(\"Sorry, please provide an integer.\")\n",
+    "        else:\n",
+    "            if chips.bet > chips.total:\n",
+    "                print(f\"Sorry, you don't have enough chips! You have: {chips.total}\")\n",
+    "            else:\n",
+    "                break"
    ]
   },
   {
@@ -281,13 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hit(deck,hand):\n",
     "    \n",
-    "    hand.add_card(deck.deal())"
+    "    hand.add_card(deck.deal())\n",
+    "    hand.adjust_for_ace()"
    ]
   },
   {
@@ -301,18 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hit_or_stand(deck,hand):\n",
     "    global playing  # to control an upcoming while loop\n",
-    "    \n",
-    "    choice = input(\"Hit or Stand?\")\n",
-    "    if choice.lower() == \"hit\":\n",
-    "        hit(deck, hand)\n",
-    "    elif choice.lower() == \"stand\":\n",
-    "        player = False"
+    "    while True:\n",
+    "        choice = input(\"Hit or Stand?\")\n",
+    "        if choice.lower() == \"hit\":\n",
+    "            hit(deck, hand)\n",
+    "            break\n",
+    "        elif choice.lower() == \"stand\":\n",
+    "            playing = False\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Sorry, please type hit or stand.\")"
    ]
   },
   {
@@ -325,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,32 +365,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def player_busts(player,chips):\n",
     "    print(\"Player busts!\")\n",
-    "    chips.total -= chips.bet\n",
-    "    chips.bet = 0\n",
+    "    chips.lose_bet()\n",
     "\n",
     "def player_wins(player,chips):\n",
     "    print(\"Player wins!\")\n",
-    "    chips.total += chips.bet\n",
-    "    chips.bet = 0\n",
+    "    chips.win_bet()\n",
     "\n",
     "def dealer_busts(dealer,chips):\n",
     "    print(\"Dealer busts!\")\n",
-    "    chips.total += chips.bet\n",
-    "    chips.bet = 0\n",
+    "    chips.win_bet()\n",
     "    \n",
     "def dealer_wins(dealer,chips):\n",
     "    print(\"Dealer wins!\")\n",
-    "    chips.total -= chips.bet\n",
-    "    chips.bet = 0\n",
+    "    chips.lose_bet()\n",
     "    \n",
-    "def push():\n",
-    "    pass"
+    "def push(player,dealer):\n",
+    "    print(\"Dealer & player tie!\")"
    ]
   },
   {
@@ -391,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -399,66 +406,60 @@
      "output_type": "stream",
      "text": [
       "Welcome to Blackjack!\n",
-      "Please enter a bet amount:100\n",
-      "Dealer: Jack of Clubs\n",
+      "How many chips would you like to bet?100\n",
+      "Dealer: Four of Hearts\n",
       "Player:\n",
-      "\tSix of Diamonds\n",
-      "\tTwo of Hearts\n",
-      "8\n",
-      "Hit or Stand?hit\n",
-      "Dealer: Jack of Clubs\n",
+      "\tKing of Spades\n",
+      "\tAce of Hearts\n",
+      "21\n",
+      "Hit or Stand?stand\n",
+      "Dealer: Four of Hearts\n",
       "Player:\n",
-      "\tSix of Diamonds\n",
-      "\tTwo of Hearts\n",
+      "\tKing of Spades\n",
+      "\tAce of Hearts\n",
+      "Dealer:\n",
+      "\tFour of Hearts\n",
+      "\tSeven of Clubs\n",
       "\tTwo of Diamonds\n",
+      "\tAce of Diamonds\n",
+      "\tJack of Hearts\n",
+      "Player:\n",
+      "\tKing of Spades\n",
+      "\tAce of Hearts\n",
       "Dealer busts!\n",
       "200\n",
       "Play again? [y/n]y\n",
       "Welcome to Blackjack!\n",
-      "Please enter a bet amount:200\n",
-      "Dealer: King of Hearts\n",
+      "How many chips would you like to bet?200\n",
+      "Sorry, you don't have enough chips! You have: 100\n",
+      "How many chips would you like to bet?100\n",
+      "Dealer: Seven of Clubs\n",
       "Player:\n",
-      "\tFour of Clubs\n",
-      "\tFive of Clubs\n",
-      "9\n",
+      "\tTen of Diamonds\n",
+      "\tTwo of Hearts\n",
+      "12\n",
       "Hit or Stand?hit\n",
-      "Dealer: King of Hearts\n",
+      "Dealer: Seven of Clubs\n",
       "Player:\n",
-      "\tFour of Clubs\n",
-      "\tFive of Clubs\n",
-      "\tAce of Spades\n",
-      "Dealer busts!\n",
-      "100\n",
-      "Play again? [y/n]y\n",
-      "Welcome to Blackjack!\n",
-      "Please enter a bet amount:300\n",
-      "Dealer: Six of Spades\n",
-      "Player:\n",
-      "\tSeven of Spades\n",
-      "\tThree of Hearts\n",
-      "10\n",
-      "Hit or Stand?hit\n",
-      "Dealer: Six of Spades\n",
-      "Player:\n",
-      "\tSeven of Spades\n",
-      "\tThree of Hearts\n",
-      "\tEight of Clubs\n",
-      "Dealer:\n",
+      "\tTen of Diamonds\n",
+      "\tTwo of Hearts\n",
       "\tSix of Spades\n",
-      "\tFour of Spades\n",
-      "\tTwo of Diamonds\n",
-      "Player:\n",
-      "\tSeven of Spades\n",
-      "\tThree of Hearts\n",
-      "\tEight of Clubs\n",
       "Hit or Stand?stand\n",
-      "Dealer: Six of Spades\n",
+      "Dealer: Seven of Clubs\n",
       "Player:\n",
-      "\tSeven of Spades\n",
-      "\tThree of Hearts\n",
-      "\tEight of Clubs\n",
-      "Dealer busts!\n",
-      "100\n",
+      "\tTen of Diamonds\n",
+      "\tTwo of Hearts\n",
+      "\tSix of Spades\n",
+      "Dealer:\n",
+      "\tSeven of Clubs\n",
+      "\tFour of Clubs\n",
+      "\tQueen of Spades\n",
+      "Player:\n",
+      "\tTen of Diamonds\n",
+      "\tTwo of Hearts\n",
+      "\tSix of Spades\n",
+      "Dealer wins!\n",
+      "0\n",
       "Play again? [y/n]n\n"
      ]
     }
@@ -482,7 +483,7 @@
     "    chips = Chips()\n",
     "    \n",
     "    # Prompt the Player for their bet\n",
-    "    take_bet()\n",
+    "    take_bet(chips)\n",
     "    \n",
     "    # Show cards (but keep one dealer card hidden)\n",
     "    show_some(player,dealer)\n",
@@ -495,32 +496,36 @@
     "        \n",
     "        # Show cards (but keep one dealer card hidden)\n",
     "        show_some(player,dealer)\n",
-    "        if player.value == 21:\n",
-    "            player_wins(player,chips)\n",
+    "\n",
     "        # If player's hand exceeds 21, run player_busts() and break out of loop\n",
-    "        elif player.value > 21:\n",
+    "        if player.value > 21:\n",
     "            player_busts(player,chips)\n",
     "            break\n",
     "\n",
     "    # If Player hasn't busted, play Dealer's hand until Dealer reaches 17\n",
-    "        else:\n",
-    "            dealer.add_card(deck.deal())\n",
-    "            \n",
-    "        if dealer.value >= 17:\n",
-    "            dealer_busts(dealer,chips)\n",
-    "            break\n",
-    "    \n",
+    "    if player.value <= 21:\n",
+    "        while dealer.value <= 17:\n",
+    "            hit(deck,dealer)\n",
+    "\n",
     "        # Show all cards\n",
     "        show_all(player,dealer)\n",
     "        # Run different winning scenarios\n",
-    "        \n",
-    "    \n",
+    "        if dealer.value > 21:\n",
+    "            dealer_busts(dealer,chips)\n",
+    "        elif dealer.value > player.value:\n",
+    "            dealer_wins(dealer,chips)\n",
+    "        elif dealer.value < player.value:\n",
+    "            player_wins(player,chips)\n",
+    "        else:\n",
+    "            push(player,dealer)\n",
+    "\n",
     "    # Inform Player of their chips total \n",
     "    print(chips.total)\n",
     "    # Ask to play again\n",
     "    if input(\"Play again? [y/n]\").lower() == \"n\":\n",
     "        break\n",
     "    else:\n",
+    "        playing = True\n",
     "        continue"
    ]
   },
