Update classes-and-objects-extra to include __str__ method

--- a/python3_classes-and-objects-extra.ipynb
+++ b/python3_classes-and-objects-extra.ipynb
@@ -145,6 +145,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "enabling-dietary",
+   "metadata": {},
+   "source": [
+    "## The `__str__` method\n",
+    "When Python needs a class or object to be presented as a string (e.g. putting an object or string into the `print()` function) it tries to invoke the `__str__()` method. If you haven't overridden it with something the default will be a rather ugly string like `<__main__.NewClass object at 0x12347cc45x>`. However, you can override this to be something more useful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fuzzy-argument",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi I'm Bob. I'm an object of the NewClassWithStr.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NewClassWithStr():\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"Hi I'm \" + self.name + \". I'm an object of the NewClassWithStr.\"\n",
+    "    \n",
+    "bob_the_object = NewClassWithStr(\"Bob\")\n",
+    "print(bob_the_object)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "certain-school",
    "metadata": {},
    "source": [
@@ -181,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.3"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
