Update inheritance notebook to discuss multiple inheritance

--- a/python3_inheritance.ipynb
+++ b/python3_inheritance.ipynb
@@ -299,9 +299,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "stretch-personality",
+   "metadata": {},
+   "source": [
+    "## Multiple inheritance\n",
+    "Although single inheritance (1-superclass-to-1-subclass as above) is the preferred/recommended route you can also have multiple superclasses e.g. `class Hominid(Primate, Mammal)`. \n",
+    "\n",
+    "But what happens if both of the parents have different methods/properties with the same name? First, it's worth clarifying what happens in single-inheritance when more than one superclass have methods/properties with the same name. The bottom-most definition of the method/property supercedes any previous definitions (i.e. the most recent definition is the one that is used)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "entire-secretary",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "891 My parvar is better and it's 891\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SingleInh1:\n",
+    "    parvar=41\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def printparvar(self):\n",
+    "        return f\"My parvar value is {self.parvar}\"\n",
+    "        \n",
+    "class SingleInh2(SingleInh1):\n",
+    "    parvar=891\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def printparvar(self):\n",
+    "        return f\"My parvar is better and it's {self.parvar}\"\n",
+    "        \n",
+    "class SingleInh3(SingleInh2):\n",
+    "    pass\n",
+    "\n",
+    "single_inh_obj = SingleInh3()\n",
+    "\n",
+    "print(single_inh_obj.parvar,single_inh_obj.printparvar())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "legal-screening",
+   "metadata": {},
+   "source": [
+    "In the case of multiple inheritance Python looks from bottom-to-top (i.e. latest defined) AND left-to-right. So, overall Python looks for object components in the following order:\n",
+    "- In the object itself\n",
+    "- In the objects superclass(s), going from bottom to top and selecting the first match\n",
+    "- If there are multiple matches on the same level, from left to right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "arctic-stephen",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LEFT I'm the Left\n",
+      "RIGHT I'm the right\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LeftParent:\n",
+    "    var=\"LEFT\"\n",
+    "    def fun(self):\n",
+    "        return \"I'm the Left\"\n",
+    "    \n",
+    "class RightParent:\n",
+    "    var=\"RIGHT\"\n",
+    "    def fun(self):\n",
+    "        return \"I'm the right\"\n",
+    "    \n",
+    "class BothChild(LeftParent, RightParent):\n",
+    "    pass\n",
+    "\n",
+    "class BothChildReversed(RightParent, LeftParent): # just changing the order of the superclasses in parentheses\n",
+    "    pass\n",
+    "\n",
+    "child_obj = BothChild()\n",
+    "child_obj_reversed = BothChildReversed()\n",
+    "\n",
+    "print(child_obj.var,child_obj.fun())\n",
+    "print(child_obj_reversed.var,child_obj_reversed.fun())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fresh-termination",
+   "id": "international-reading",
    "metadata": {},
    "outputs": [],
    "source": []
