Update lambda-functions notebook, add closures notebook

--- a/python3_lambda-functions.ipynb
+++ b/python3_lambda-functions.ipynb
@@ -9,12 +9,14 @@
     "A `lambda` function is a function without a name (aka an __anonymous function__). These are normally very short, very simple functions where you're more interested in the result provided by the function than the function itself.\n",
     "\n",
     "The form of lambda functions is as follows:\n",
-    "<br>`lambda parameters: expression`"
+    "<br>`lambda parameters: expression`\n",
+    "\n",
+    "__NOTE__: [PEP8](https://www.python.org/dev/peps/pep-0008/#programming-recommendations) recommends NOT assigning lambdas to variables but defining them using the `def` keyword like a normal function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "welcome-double",
    "metadata": {},
    "outputs": [
@@ -29,9 +31,9 @@
     }
    ],
    "source": [
-    "self_power = lambda x: x**x\n",
-    "power = lambda x,y: x**y\n",
-    "name_printer = lambda z: print(\"Hi, I'm\",z)\n",
+    "def self_power(x): return x**x\n",
+    "def power(x,y): return x**y\n",
+    "def name_printer(z): print(\"Hi, I'm\",z)\n",
     "\n",
     "print(self_power(2))\n",
     "print(power(29,12))\n",
