Update datetime-module notebook, add time-module notebook

--- a/python3_datetime-module.ipynb
+++ b/python3_datetime-module.ipynb
@@ -238,9 +238,298 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a162b9fe",
+   "metadata": {},
+   "source": [
+    "## Creating `datetime` objects\n",
+    "In the `datetime` module, date and time can be represented as separate objects or as one. The class that combines date and time is called `datetime`.\n",
+    "\n",
+    "Its constructor accepts the following parameters:\n",
+    "\n",
+    "Parameter| Restrictions\n",
+    ":--|:--\n",
+    "year|must be >= 1 (MINYEAR constant) and <= 9999 (MAXYEAR constant)\n",
+    "month|must be >= 1 and <= 12\n",
+    "day|must be >= 1 and <= the last day of the given month & year\n",
+    "hour|must be >=0 and <=23\n",
+    "minute|must be >=0 and <=59\n",
+    "second|must be >=0 and <=59\n",
+    "microsecond|must be >=0 and <=1,000,000\n",
+    "tzinfo|must be a `tzinfo` subclass object or `None` (default)\n",
+    "fold|must be 0 (default) or 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "87f3fbde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datetime: 2019-11-04 14:53:00\n",
+      "Date: 2019-11-04\n",
+      "Time: 14:53:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "dtime = datetime(2019, 11, 4, 14, 53)\n",
+    "\n",
+    "print(\"Datetime:\", dtime)\n",
+    "print(\"Date:\",dtime.date()) # date method returns date object with given year\n",
+    "print(\"Time:\", dtime.time()) # time method returns time object with given hour and minute"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a67294a9",
+   "metadata": {},
+   "source": [
+    "## Methods that return the current date and time\n",
+    "The datetime class has several methods that return the current date and time.\n",
+    "- `today()`: returns the current local date and time with the tzinfo attribute set to `None`\n",
+    "- `now()`: returns the current local date and time the same as today method, unless we pass options argument `tz` to it. The argument of this method must be an object of the `tzinfo` subclass.\n",
+    "- `utcnow()`: returns the current UTC date and time with the `tzinfo` attribute set to `None`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b65abbcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today: 2021-05-10 17:11:33.951767\n",
+      "Now: 2021-05-10 17:11:33.952005\n",
+      "UTC Now: 2021-05-10 16:11:33.952101\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "print(\"Today:\", datetime.today())\n",
+    "print(\"Now:\", datetime.now())\n",
+    "print(\"UTC Now:\", datetime.utcnow())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31237ef3",
+   "metadata": {},
+   "source": [
+    "## Getting a timestamp\n",
+    "The `timestamp` method provided by the `datetime` class allows us to generate a timestamp based on a given date and time.\n",
+    "\n",
+    "__NOTE__: the `timestamp` method returns a float value expressing the number of seconds elapsed between the *Unix epoch* and the provided date & time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "63ce53a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Timestamp: 1620663180.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "dt = datetime(2021,5,10,17,13)\n",
+    "print(\"Timestamp:\", dt.timestamp())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39268e45",
+   "metadata": {},
+   "source": [
+    "## Date and time formatting\n",
+    "All `datetime` module classes presented so far have a method called `strftime` that allows us to return the date & time in a specified format. `strftime` takes only one argument inthe form of a string specifying the format using *directives*.\n",
+    "\n",
+    "A *directive* is a string consisting of the percent `%` character and a lowercase or uppercase letter. For example `%Y` means the year with the century as a decimal number such as *1991*.\n",
+    "\n",
+    "Directive|Meaning|Example\n",
+    ":--|:--|:--\n",
+    "`%a`|Weekday as locale's abbreviated name|Sun, Mon, Tue...\n",
+    "`%A`|Weekday as locale's full name|Sunday, Monday...\n",
+    "`%w`|Weekday as a decimal number where 0 is Sunday and 6 is Saturday|0, 1, ..., 6\n",
+    "`%d`|Day of the month as a zero-padded decimal number| 01, 02, ..., 31\n",
+    "`%b`|Month as locale's abbreviated name|Jan, Feb, Mar...\n",
+    "`%B`|Month as locale's full name|January, February...\n",
+    "`%m`|Month as a zero-padded decimal|01, 02, ..., 12\n",
+    "`%y`|Year withou century as zero-padded decimal|01, 84, 98, 21\n",
+    "`%Y`|Year with century as decimal|1980, 2021\n",
+    "`%H`|Hour (24-hr format) as a zero-padded decimal|00, 13, 23\n",
+    "`%I`|Hour (12-hr format) as a zero-padded decimal|01, 3, 12\n",
+    "`%p`|Locale's equivalent of either AM or PM|AM, PM, am, pm\n",
+    "`%M`|Minute as a zero-padded decimal|00, 15, 35, 59\n",
+    "`%S`|Second as a zero-padded decimal|00, 15, 35, 59\n",
+    "`%f`|Microsecond as a decimal, zero-padded on left|000000, 000001, 999999\n",
+    "`%z`|UTX offset in the form `+HHMM[SS[.ffffff]]`|(empty), +0000,-0400\n",
+    "`%Z`|Time zone name (empty if object is naive)|(empty), UTC, GMT\n",
+    "`%j`|Day of the year as a zero-padded decimal|001, 039, 366\n",
+    "`%U`|Week number of the year (Sunday as first day of week) as zero-padded decimal|00, 03, 53\n",
+    "`%W`|Week number of the year (Monday as first day of week) as zero-padded decimal|00, 03, 53\n",
+    "`%c`|Locale's appropriate date and time representation|Tue Aug 16 21:30:00 1988\n",
+    "`%x`|Locale's appropriate date representation|08/16/88, 08/16/1988, 16.08.1988\n",
+    "`%X`|Locale's appropriate time representation|21:30:00\n",
+    "`%%`|A literal `%` character"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2c00c317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1991/02/08\n",
+      "17:49:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "from datetime import time\n",
+    "\n",
+    "d = date(1991,2,8)\n",
+    "print(d.strftime(\"%Y/%m/%d\"))\n",
+    "\n",
+    "t = time(17,49)\n",
+    "print(t.strftime(\"%H:%M:%S\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f7d3605",
+   "metadata": {},
+   "source": [
+    "## The `strptime()` method\n",
+    "The `strptime` method creates a `datetime` object from a string representing the date and time but requires that you specify the format in which the date & time is saved. If the format you specify doesn't match that of the given string, a `ValueError` will be raised."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0ade8596",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-11-04 14:53:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "print(datetime.strptime(\"2019/11/04 14:53:00\", \"%Y/%m/%d %H:%M:%S\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "342f0228",
+   "metadata": {},
+   "source": [
+    "## Date and time operations\n",
+    "There's a class called `timedelta` in the `datetime` module that allows you to perform calculations on date and time. To create a `timedelta` object, simply do a subtraction on the `date` or `datetime` objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e4a4d0a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "366 31622400.0\n",
+      "365 days, 9:07:00\n",
+      "732 days, 0:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "from datetime import datetime\n",
+    "\n",
+    "d1 = date(2020, 11, 4)\n",
+    "d2 = date(2019, 11, 4)\n",
+    "\n",
+    "timed = d1 - d2\n",
+    "print(timed.days, timed.total_seconds())\n",
+    "\n",
+    "dt1 = datetime(2020, 11, 4, 0, 0, 0)\n",
+    "dt2 = datetime(2019, 11, 4, 14, 53, 0)\n",
+    "\n",
+    "print(dt1 - dt2)\n",
+    "\n",
+    "delta2 = timed * 2\n",
+    "print(delta2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3c5b50d",
+   "metadata": {},
+   "source": [
+    "You can also create a `timedelta` using the `timedelta` class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a96ae172",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25 days, 2:00:00\n",
+      "Days: 25\n",
+      "Seconds: 7200\n",
+      "Microseconds: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import timedelta\n",
+    "\n",
+    "delta = timedelta(weeks=3, days=4, hours=2)\n",
+    "print(delta)\n",
+    "print(\"Days:\",delta.days)\n",
+    "print(\"Seconds:\",delta.seconds)\n",
+    "print(\"Microseconds:\",delta.microseconds)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87725edc",
+   "id": "052415d6",
    "metadata": {},
    "outputs": [],
    "source": []
